added logic for logging in and registering based on type